a bit of cleaning while looking for #610